--- a/Tarea1Mate.tex
+++ b/Tarea1Mate.tex
@@ -9,255 +9,8 @@
 \author{Garcia Islas Fernando \\ Leo\\Mariana}
 \begin{document}
 \maketitle
-\section{\large Un cohete}
-Un cohete es disparado verticalmente hacia arriba y el combustible que lo impulsa se quema durante 60 segundos. Se sabe que, a los $h$ s de haber iniciado su desplazamiento, la altura $h$ (en metros) a la que se encuentra el cohete es: \[h(t) = 40 t^2 \; m\]
-\begin{enumerate}
 
-%Punto 1 del ejercicio 1
-\item ¿A qué altura se halla el cohete cuando se le agota el combustible?
-  
-  \begin{align*}
-    h(t)= 40t^2 \; \text{m} \hspace{5.1cm}    h(t)&=40(60)^2 \; m\\
-t=60\text{s} \hspace{7cm}    &=40(3600) \; m\\
-    &=144,000 \; m\\
-  \end{align*}
-  
-  {\bf R:} 144,000 m es la altura cuando se agota el combustible.
-  
-  %Punto 2 del ejercicio 1
-\item ¿Cuál es la rapidez promedio del cohete durante los primeros 60 s de su vuelo?
-  
-  \begin{align*}
-    &\text{Rapidez promedio}=\frac{d}{t} \hspace{3cm}\frac{144,000}{60}= 2400 \frac{m}{s}\\
-    &t = 60\; \text{s} \\
-    &d = 40t^2 \; \text{m} 
-  \end{align*}
-  
-  {\bf R:} $2,400 \frac{m}{s}$ es la rapidez promedio.
-  
-  %Punto 3 del ejercicio 1
-\item Haga una tabla con tres columnas: una para el tiempo $t$ (donde $t = 0, 10, 20, . . . , 60 $s); otra para la posición $h(t)$; y una tercera para el incremento $\Delta h$ entre un valor de $t$ y el siguiente. Con base en ella, calcule la rapidez promedio del cohete para cada lapso de 10 s desde $t = 0$ hasta $t = 60$.
-  
-  \begin{table}[h]
-  
-    \begin{center}
-  
-        \begin{tabular}{| c | c | c |c|}\hline %Tabla 1
-            $\Delta t$ s & $h(t)$ m & $\Delta h$ m&$\frac{h(t)}{t}\frac{m}{s}$\\ \hline
-            0 & 0 & 0 &0 \\ 
-            10& 4000& 4000& 4000 \\
-            20&16,000&12,000&800\\
-            30&36,000&20,000&1,200\\
-            40&64,000&28,000&1,600\\
-            50&100,000&36.000&2,000\\
-            60& 144,000& 44,000& 2,400 \\ \hline
-        \end{tabular}
-    
-    \caption{Rapidez promedio de intervalos $\Delta t$} 
-    
-    \label{tab:rapprom}
-    
-    \end{center}
-  
-  \end{table}
-
-%Punto 4 del ejercicio 1
-\item Haga ahora otra tabla en la que muestre el cálculo de la rapidez promedio del cohete $\Delta t$ s antes y $\Delta t$ s después de $t = 3$ s, para los siguientes valores de $\Delta t$:\[1,\frac{1}{10},\frac{1}{10^2},\frac{1}{10^3},\frac{1}{10^4},\frac{1}{10^5}.\]
-  
-    \begin{table}[H]
-        \begin{center}
-            \begin{minipage}{0.45\linewidth}
-            \centering
-                \begin{tabular}{| c | c | c |}\hline %Tabla 2
-                  $\Delta t+3$  & $h(t)$  &$\frac{h}{t}$\\ \hline
-                    4&640&160 \\
-                    3.1&384.4&124\\
-                    3.01&362.404&120.4\\
-                    3.001&360.24004&120.04\\
-                    3.0001&360.0240004&120.004\\
-                    3.00001&360.0024&120.0004 \\ \hline
-                \end{tabular}
-            \caption{Rapidez promedio de intervalos $\Delta t + 3$}
-            \label{tab:rapprom+3}
-            \end{minipage}
-            \hspace{0.05\linewidth} 
-            \begin{minipage}{0.45\linewidth}
-            \centering
-            \begin{tabular}{| c | c | c |}\hline %Tabla 3
-                $3 - \Delta t$  & $h(t)$  &$\frac{h}{t}$\\ \hline
-                2&160&80 \\
-                2.9&336.4&116\\
-                2.99&357.604&119.6\\
-                2.999&359.76004&119.96\\
-                2.9999&359.9760004&119.996\\
-                2.99999&359.9760004&119.9924\\ \hline
-            \end{tabular}
-            \caption{Rapidez promedio de intervalos $3 - \Delta t$}
-            \label{tab:rapprom-3}
-            \end{minipage}
-        \end{center}
-    \end{table}
-    
-
-%Punto 5 del ejercicio 1
-\item Es razonable suponer que la rapidez instantánea del cohete exactamente a los $t = 3$ s, tomará un valor intermedio entre la rapidez promedio $\Delta t$ s antes y $\Delta t$ s después de $t = 3$. Si esto es cierto, según sus cálculos, ¿cuánto vale esa rapidez instantánea?\\
-    
-    {\bf R:} $120 \frac{m}{s}$, ya que el valor intermedio de la rapidez promedio de los valores $3- \Delta t$ y $\Delta t +3$ es cercano a 120.\par
-    
-%Punto 6 del ejercicio 1
-\item Si la función $y = y(t)$ describe la posición de un objeto que se mueve con un solo grado de libertad, entonces la velocidad instantánea del móvil, $v = v(t)$, en cualquier instante $t$ de su desplazamiento se define como:
-  
-  \begin{equation}
-    v(t) = \lim_{\Delta t \rightarrow \infty}\frac{y(t - \Delta t) - y(t)}{\Delta t}
-  \end{equation}
-  
-  Aplique la definición (1) para mostrar que la velocidad del cohete, cuya posición para $0 \leq t \leq 60$ viene dada por $h(t) = 40t^2$, en el instante $t$ es $v(t) = 80t$. Calcule la velocidad exactamente a los $10$ s y los $45$ s de vuelo.
-  
-    \begin{align*}
-        v(t) = \lim_{\Delta t \rightarrow \infty}\frac{h(t - \Delta t) - h(t)}{\Delta t}&= \lim_{\Delta t \rightarrow \infty}\frac{40(t - \Delta t)^2 - 40t^2}{\Delta t}\\
-        &=\lim_{\Delta t \rightarrow \infty}\frac{40(t^2+2t\Delta t + \Delta t^2) - 40t^2}{\Delta t}\\
-        &=\lim_{\Delta t \rightarrow \infty}\frac{40t^2+80t\Delta t + 40\Delta t^2 - 40t^2}{\Delta t}\\
-        &=\lim_{\Delta t \rightarrow \infty}\frac{80t\Delta t + 40\Delta t^2}{\Delta t}\\
-        &=\lim_{\Delta t \rightarrow \infty}\frac{\Delta t(80t+ 40\Delta)}{\Delta t}\\
-        &=\lim_{\Delta t \rightarrow \infty}(80t+ 40\Delta) = 80t\\
-    \end{align*}\\
-    
-    \begin{table}[h]
-  
-        \begin{center}
-  
-            \begin{tabular}{| c | c |}\hline %Tabla 4
-                $t$ s & $v(t)$\\ \hline
-                10 & 800 $\frac{m}{s}$\\ 
-                45& 3,600 $\frac{m}{s}$  \\ \hline
-            \end{tabular}
-  
-            \caption{Rapidez instantánea} 
-  
-            \label{tab:rapinst}
-  
-        \end{center}
-  
-    \end{table}
-    
-\end{enumerate}
-
-\section{\large La pirámide del sol}
-
-Según la Wikipedia, si se supone que la base de la pirámide del sol de Teotihuacan es cuadrada y que sus caras son lisas, su volumen es de $1.184828 \times 10^6 \, \text{m}^3$.
-
-La versión en español de la misma enciclopedia informa que la altura de la pirámide es de $65$ m y el lado de su base mide $223$ m. A su vez, en la versión en inglés, se lee que la altura es de $71.17$ m y el lado de la base mide $223.48$ m. ¿Cuáles son los datos congruentes con el valor del volumen propuesto arriba si se sabe que el volumen $V$ de una pirámide viene dado por la fórmula:
-    \[V = \frac{1}{3} A h \tag{2}\]
-
-    donde $A$ es el área de la base y $h$, la altura?
-
-    Si bien la fórmula (2) se puede obtener mediante argumentos geométricos relativamente simples en los que no se aplica el método de rebanar, aproximar y pasar al límite de Arquímedes (o de Eudoxo), este ejercicio tiene el propósito de experimentar numéricamente para encontrar una cota inferior y una cota superior del volumen $V$ de la pirámide del sol. Para ello, desarrolle los siguientes pasos:
-
-\begin{enumerate}
-
-%Punto 1 del ejercicio 2
-    \item Imagine que hace 49 cortes transversales paralelos a la base, a intervalos regulares de altura $\Delta h = \frac{h}{50}$ donde $h$ es la altura de la pirámide (medida desde la cúspide hasta el centro de la base) y suponga que el volumen $V_j$ de la $j$-ésima rebanada es aproximadamente igual al:
-  
-        \begin{enumerate}
-  
-            \item Volumen del prisma circunscrito a la pirámide a la altura de esa $j$-ésima rebanada de altura $\Delta h$ para $j = 1, 2, \dots, 50$.
-  
-            \item Volumen del prisma inscrito a la pirámide a la altura de esa $j$-ésima rebanada de altura $\Delta h$ para $j = 0, 1, \dots, 49$.
-  
-        \end{enumerate}
-  
-        \includegraphics[width=0.5\textwidth, center]{piramide5.png}
-  
-        \[V_j = \Delta h \hspace{4.4pt}(l_j)^2\]
-
-%Punto 2 del ejercicio 2
-    \item Adapte el argumento que sugiere la siguiente figura (para el cálculo del volumen de un cono) al caso de la pirámide y aplíquelo para calcular los volúmenes $V_j$ de los prismas inscritos y circunscritos. 
- 
-        \includegraphics[width=0.5\textwidth, center]{cono.png} \\
-        
-        Teniendo el argumento, con la formula de calcular de un volumen j-ésimo y los siguientes datos:
-    
-            \begin{align*}
-                V_j &= \Delta h(l_j)^2 \\
-                \Delta h &= \frac{h}{50}\\
-                P &= \left\{ \frac{0h}{50}, \frac{1h}{50}, \frac{2h}{50}, \frac{3h}{50}, \frac{4h}{50}, \dots,\frac{50h}{50} \right\}\\
-                P &= \{ h_0, h_1, h_2, h_3, h_4, \dots, h_{50} \}\\
-                h_j &= j \Delta h, \quad j = 1, 2, 3, 4, \dots, 50\\
-            \end{align*}
-            
-        Primero tendríamos que obtener el valor de $l_j$. Por lo tanto, teniendo dos primas uno con base $l_0$ (siendo este el valor de la base de la pirámide) y otro con base $l_j$, si trazamos dos triángulos semejantes sobre las bases se puede obtener el valor de $ l_j$ de la siguiente forma:
-        
-        
-        \begin{minipage}[H]{0.45\textwidth}
-            \raggedleft
-            \includegraphics[width=\textwidth, center]{piramide2.png}
-        \end{minipage}
-        \hfill
-        \begin{minipage}[H]{0.45\textwidth}
-            \begin{align*}
-                \frac{\frac{l_0}{2}}{h} &= \frac{\frac{l_j}{2}}{h - h_j}\\
-                \frac{l_0}{2h} &= \frac{l_j}{2(h - h_j)}\\
-                \frac{l_0 \cdot 2(h - h_j)}{2h} &= l_j\\
-                \frac{l_0 \cdot (h - h_j)}{50h} &= l_j
-            \end{align*}
-        \end{minipage}
-        
-        Y sustituyendo el valor $l_j$ en la fórmula del volumen
-    
-        \begin{align*}
-            V_j &= \Delta h \left( \frac{l_0 \cdot (h - h_j)}{h} \right)^2\\
-            V_j &=   \frac{h \cdot l_0^2 \cdot (h - h_j)^2}{50 h^2} \\
-            V_j &=   \frac{l_0^2 \cdot (h - h_j)^2}{50 h}\\
-        \end{align*}
-        Cabe señalar que tanto para los volúmenes inscritos y circunscritos la fórmula de $V_j$ funciona para ambos, solo que en la sumatoria de ambos, para el caso de los inscritos se empezará con un j=1 hasta 49.
-
-%Punto 3 del ejercicio 2
-    \item Sume los volúmenes que obtuvo en el inciso anterior y explique por qué el volumen de la pirámide del sol debe ser menor que la suma de los volúmenes de los prismas circunscritos y mayor que la suma de los volúmenes de los prismas inscritos.
-     
-    
-        \begin{minipage}[H]{0.45\textwidth}
-            \raggedleft
-        \begin{align*}
-            \sum_{j=0}^{50} \frac{l_0^2 \cdot (h - h_j)^2}{50h} &= \frac{l_0^2 \cdot }{50h}  \sum_{j=0}^{50}(h - h_j)\\
-            &= \frac{l_0^2}{50h}  \sum_{j=0}^{50} \left(h -j \frac{h}{50} \right)^2\\
-            &= \frac{l_0^2}{50h}  \sum_{j=0}^{50} \left(\frac{50j-jh}{50} \right)^2\\
-            &= \frac{l_0^2}{50h}  \sum_{j=0}^{50} \frac{h^2}{50^2} \left(50-j \right)^2\\
-            &= \frac{l_0^2 h^2}{50^3h}  \sum_{j=0}^{50} \left(50-j \right)^2\\
-            &= \frac{l_0^2 h}{50^3}  \sum_{j=0}^{50} \left(50-j \right)^2\\
-            &= \frac{l_0^2 h}{50^3} \left(\frac{50(50+1)(2(50)+1)}{6} \right) \\
-            &= \frac{233.48^2 (71.17)}{125,000}(42,925)\\
-            &= \frac {54,512.9104(71.17)(42,925)}{125,000}\\
-            &= \frac {3,879,683.833168(42,925)}{125,000}\\
-            &= \frac {166,535,428,538.7364}{125,000}\\
-            &= 1,332,283.4283098912
-        \end{align*}
-        \end{minipage}
-        \hfill
-        \begin{minipage}[H]{0.45\textwidth}
-            \raggedleft
-            \begin{align*}
-            \sum_{j=1}^{49} \frac{l_0^2 \cdot (h - h_j)^2}{50h} &= \frac{l_0^2 \cdot }{50h}  \sum_{j=0}^{50}(h - h_j)\\
-            &= \frac{l_0^2}{50h}  \sum_{j=0}^{50} \left(h -j \frac{h}{50} \right)^2\\
-            &= \frac{l_0^2}{50h}  \sum_{j=0}^{50} \left(\frac{50j-jh}{50} \right)^2\\
-            &= \frac{l_0^2}{50h}  \sum_{j=0}^{50} \frac{h^2}{50^2} \left(50-j \right)^2\\
-            &= \frac{l_0^2 h^2}{50^3h}  \sum_{j=0}^{50} \left(50-j \right)^2\\
-            &= \frac{l_0^2 h}{50^3}  \sum_{j=0}^{50} \left(50-j \right)^2\\
-            &= \frac{l_0^2 h}{50^3} \left(\frac{50(50+1)(2(50)+1)}{6} \right) \\
-            &= \frac{233.48^2 (71.17)}{125,000}(42,925)\\
-            &= \frac {54,512.9104(71.17)(42,925)}{125,000}\\
-            &= \frac {3,879,683.833168(42,925)}{125,000}\\
-            &= \frac {166,535,428,538.7364}{125,000}\\
-            &= 1,332,283.4283098912
-            \end{align*}    
-        \end{minipage}
-        
-%Punto 4 del ejercicio 2
-    \item ¿Qué espera que suceda con estas cotas al hacer los mismos cálculos para un número más y más grande?\\
-     {\bf R:} El resultado convergerá al volumen real de la pirámide. 
-   \end{enumerate}
-
-
-\section{Series de potencias}
+\noindent {\large \bf3. Series de potencias}\\
 
     {\bf Definición 1} \textit{Una serie de potencias en $q$ es una suma infinita de la forma:}\[\sum_{k=1}^{\infty} a_k q^k \tag{3}\]
 
@@ -313,8 +66,8 @@ Observemos este caso y los otros dos:
 
 \begin{itemize}
     \item $-1< q \leq 0$ \\
-    Realizamos una tabla para analizar como se comporta la suma cuando q se encuentra en este rango:
-          \begin{table} [h]
+    Realizamos una tabla para analizar como se comporta la suma cuando q se encuentra en este rango:\\
+          \begin{table} [H]
             \begin{center}
                 \begin{tabular}{| c | c | c |}\\ \hline
                     q &     Serie & Suma de la serie  \\ \hline
@@ -374,7 +127,11 @@ Observamos que cuando $q<-1$ la serie $\sum_{k=1}^{n} (q)^k $ diverge. Los térm
     
 \end{itemize}
 \end{enumerate}
- \section{\large Un balón de futbol americano} 
+
+
+\noindent {\large \bf 4. Un balón de futbol americano} \\
+
+
  En este ejercicio se trata de calcular aproximadamente el volumen \( V \) de un balón de fútbol americano profesional suponiendo que su superficie se genera rotando, alrededor del eje horizontal, una curva \( y = y(x) \) que satisface que la longitud del eje entre las dos puntas del balón es de 28 cm y la circunferencia de la máxima sección circular transversal al eje mide 53 cm (véase la siguiente figura).\\
     \includegraphics[width=0.5\textwidth, center]{balon.png}
 
@@ -396,9 +153,10 @@ Entonces, si \( V_k \) es el volumen del \( k \)-ésimo cilindro,
 \[
 V \approx \sum_{k=1}^{10} V_k
 \]
-\begin{itemize}
+\renewcommand{\theenumi}{\alph{enumi}}
+\begin{enumerate}
 \item Suponga que la curva \( y = y(x) \) es un arco de parábola cuyo vértice coincide con el punto más alto de la máxima sección transversal perpendicular al eje \( x \) y que intersecta al eje horizontal en los puntos \((-14, 0)\) y \((14, 0)\). Entonces:
-
+\renewcommand{\theenumi}{\arabic{enumi}}
 \begin{enumerate}
     \item Muestre que la parábola es, aproximadamente, la gráfica de la función
 
@@ -463,31 +221,58 @@ Sabemos que la punto del vértice de la parábola con respecto al origen es $(0,
 V \approx 2 \times 1825.5143 = 3651.0286 \text{ cm}^3
 \]
 
-{\bf R:} 
-\begin{table}{H}
+{\bf R:} Con la función de la parábola para obtener los radios, generamos la siguiente tabla con los valores de los volúmenes:
+\begin{table}[H]
     \centering
-\begin{tabular}{|c|c|c|c|}\hline
-    $V_k$ &Radio{cm} & Área [$cm^2$] & Volumen[$cm^3$]\\ }\hline
-     0 & 8.4352 & 233.533 & 312.946 \\
-     1 & 8.375 & 220.353 & 308.495 \\
-     2 & 8.3148 & 217.1973 & 304.076\\
-     3 & 8.2546 & 214.0636 & 299.6891\\
-     4 & 8.1944 & 210.9527 & 295.333\\
-     5 & 8.1342 & 207.8646 & 291.0104\\
-     6 & 8.074 & 204.7992 & 286.7189\\
-     7 & 8.0138 & 201.756 & 282.4593\\
-     8 & 7.9536 & 198.7368 & 278.2315\\
-     9 & 7.8934 & 195.7397 & 274.0357\\\hline
-      \multicolumn{2}{|c|}{}Sumatoria & 2932.9968 cm$^3$\\\hline
+\begin{tabular}{|c|c|c|}\hline
+    $V_k$ &Radio[cm] & Volumen[cm$^3$]\\\hline
+     0 & 8.4352 & 312.9463 \\
+     1 & 8.3508 & 306.7187 \\
+     2 & 8.0978 & 288.4113\\
+     3 & 7.676 & 259.1508\\
+     4 & 7.0855 & 220.8149\\
+     5 & 6.3264 & 176.0323\\
+     6 & 5.3985 & 128.1828\\
+     7 & 4.3019 & 81.3973\\
+     8 & 3.0266 & 40.5578\\
+     9 & 1.6026 & 11.2973\\\hline
+      \multicolumn{1}{|c|}{}&Sumatoria & 1825.51 cm$^3$\\\hline
 \end{tabular}
 \label{tab:CilCirPar}
 \end{table}
+Si multiplicamos la sumatoria por dos obtenemos un resultado de 3651.02, valor aproximado al propuesto anteriormente.
 \item Muestre que la aproximación del volumen con los 10 cilindros inscritos de grosor \( \Delta x = 1.4 \) cm y radios \( y(x_k) \) cm para \( k = 1, 2, \ldots, 10 \) es:
 \end{enumerate}
+\renewcommand{\theenumi}{\alph{enumi}}
 \[
 V \approx 2 \times 1512.5672 = 3025.1344 \text{ cm}^3
 \]
+{\bf R:} Así mismo como con los circunscritos, generamos otra tabla para los inscritos:
 
+  
+  
+ \begin{table}[H]
+    \centering
+\begin{tabular}{|c|c|c|}\hline
+    $V_k$ &Radio[cm] & Volumen[cm$^3$]\\\hline
+     1 & 8.4352 & 306.7187 \\
+     2 & 8.3508 & 288.4113 \\
+     3 & 8.0978 & 259.1508\\
+     4 & 7.676 & 220.8149\\
+     5 & 7.0855 & 176.0323\\
+     6 & 6.3264 & 128.1828\\
+     7 & 5.3985 & 81.3973\\
+     8 & 4.3019 & 40.5578\\
+     9 & 3.0266 & 11.2973\\
+     10 & 1.6026 & 0\\\hline
+      \multicolumn{1}{|c|}{}&Sumatoria & 1512.5636 cm$^3$\\\hline
+\end{tabular}
+\label{tab:CilCirPar}
+\end{table} 
+  
+ Y si lo multiplicamos por dos obtenemos 3025.1273, un valor aproximado al indicado.
+  
+ 
 \item Suponga ahora que la curva \( y = y(x) \) es la mitad superior de una elipse con centro en el origen, semieje horizontal \( a = 14 \) cm (sobre el eje \( x \)) y semieje vertical \( b = \frac{53}{2\pi} \approx 8.4352 \) cm (sobre el eje \( y \)).
 
 \item Muestre que el arco de elipse es, aproximadamente, la gráfica de la función
@@ -498,17 +283,261 @@ y(x) = 0.6025 \sqrt{196 - x^2}
 
 definida para \(-14 \leq x \leq 14\).
 
+{\bf R:} Teniendo a $r_0 = \frac{53}{2\pi}$, como radio del circulo a la mitad del balón y semieje vertical b, y la función de una elipse como
+\[\frac{x^2}{14^2}+\frac{y^2}{r_0^2}=1\]
+se puede desarrollar para despejar $y$.
+    \begin{align*}
+        \left( \frac{x^2}{14^2} + \frac{y^2}{r_0^2} \right) \times 14^2r_0^2 &= 1 \times 14^2r_0^2\\
+        x^2 r_0^2 + y^2 14^2 &= 14^2 r_0^2\\
+        y^2 14^2 &= 14^2 r_0^2 - x^2 r_0^2\\
+        y^2 &= \frac{14^2 r_0^2 - x^2 r_0 ^2}{14^2}\\
+        y &=\sqrt{\frac{14^2r_0^2 -x^2r_0 ^2}{14^2}}\\
+        y &=\frac{\sqrt{14^2r_0^2 -x^2r_0 ^2}}{14}\\
+        y &=\frac{\sqrt{r_0^2(14^2 -x^2)}}{14}\\
+        y &=\frac{r_0}{14}\left(\sqrt{14^2 -x^2}\right)\\
+        y &=\frac{\frac{53}{2\pi}}{14}\left(\sqrt{196 -x^2}\right)\\
+        y(x)=y &=0.6025\sqrt{196 -x^2}\\
+    \end{align*}
+
 \item Muestre que la aproximación del volumen con los 10 cilindros circunscritos de grosor \( \Delta x = 1.4 \) cm y radios \( y(x_k) \) cm para \( k = 0, 1, 2, \ldots, 9 \) es:
 
 \[
 V \approx 2 \times 2237.4593 = 4474.9186 \text{ cm}^3
 \]
-
+{\bf R:} Teniendo la función de los radios se genera la siguiente tabla para los volúmenes circunscritos:
+  
+     \begin{table}[H]
+          \centering
+            \begin{tabular}{|c|c|c|}\hline
+                $V_k$ &Radio[cm] & Volumen[cm$^3$]\\\hline
+                0 & 8.4352 & 312.9463\\
+                1 & 8.3929 & 309.8169\\
+                2 & 8.2647 & 300.4285\\
+                3 & 8.0466& 284.7811\\
+                4 & 7.7309 & 262.8749\\
+                5 & 7.3051 & 234.7097\\
+                6 & 6.7481 & 200.2856\\
+                7 & 6.0239 & 159.6026\\
+                8 & 5.0611 & 112.6606\\
+                9 & 3.6782 & 59.4598\\\hline
+                \multicolumn{1}{|c|}{}&Sumatoria & 2237.5665 cm$^3$\\\hline
+            \end{tabular}
+        \label{tab:CilCirPar}
+    \end{table} 
+    
+Y multiplicando la sumatoria por 2 obtenemos 4475.1330, un valor aproximado al indicado.
 \item Muestre que la aproximación del volumen con los 10 cilindros inscritos de grosor \( \Delta x = 1.4 \) cm y radios \( y(x_k) \) cm para \( k = 1, 2, \ldots, 10 \) es:
 
 \[
 V \approx 2 \times 1924.5279 = 3849.0558 \text{ cm}^3
 \]
+{\bf R:} Para los volúmenes inscritos se tiene la siguiente tabla:
+  
+     \begin{table}[H]
+          \centering
+            \begin{tabular}{|c|c|c|}\hline
+                $V_k$ &Radio[cm] & Volumen[cm$^3$]\\\hline
+                1 & 8.4352 & 309.8169\\
+                2 & 8.3929 & 300.4285\\
+                3 & 8.2647 & 284.7811\\
+                4 & 8.0466 & 262.8749\\
+                5 & 7.7309 & 234.7097\\
+                6 & 7.3051 & 200.2856\\
+                7 & 6.7481 & 159.6026\\
+                8 & 6.0239 & 112.6606\\
+                9 & 5.0611 & 59.4598\\
+                10 & 3.6782 & 0\\\hline
+                \multicolumn{1}{|c|}{}&Sumatoria & 1924.6201 cm$^3$\\\hline
+            \end{tabular}
+        \label{tab:CilCirPar}
+    \end{table} 
+    
+Y multiplicando la sumatoria por 2 obtenemos 3849.2402, un valor aproximado al indicado.
+    \end{enumerate}
+    \noindent {\large \bf 8. Un jugador de béisbol} \\
+    Un jugador de béisbol batea la pelota a 3 ft de altura sobre el plato en dirección a la barda del jardín central que está a 400 ft de distancia de home y tiene 10 ft de altura. La pelota sale con rapidez de 115 $\frac{ft}{s}$ y un ángulo de elevación de 50$^{\circ}$ sobre la horizontal.
 
-    \end{itemize}
+\begin{enumerate}
+    \item Reconstruya el argumento dado en clase para mostrar que el batazo es un home run. En particular, explique por qué:
+    \begin{enumerate}
+        \item La rapidez inicial de la pelota en la dirección horizontal es \( v_{0x} = 115 \cos (50^\circ) \), de manera que \( x = x(t) \), la posición horizontal de la pelota \( t \) segundos después del batazo es:
+        \[
+        x(t) = 73.9206 \ t. \tag{11}
+        \]
+        
+        \item La rapidez inicial en la dirección vertical es \( v_{0y} = 115 \sin (50^\circ) \), lo que implica que \( y = y(t) \), la altura sobre el terreno de juego es (recuerde que, en el sistema inglés, la aceleración de la gravedad es \( g = 32 \ \text{ft/s}^2 \)):
+        \[
+        y(t) = 3 + 88.0951 \ t - 16 \ t^2. \tag{12}
+        \]
+        
+        \item A partir de la fórmula (11), calcule el tiempo que tarda la pelota en estar a 400 ft de home y, con la fórmula (12), diga a qué altura estará la pelota justo en ese momento. ¿Su respuesta implica que la pelota superó la altura de la barda?
+    \end{enumerate}
+    
+    \item En un tiro parabólico, la distancia horizontal entre el punto de partida y el lugar donde el móvil choca con algo se llama máximo alcance horizontal y se denota como \( x_{\text{max}} \). En este ejercicio, suponga que la pelota choca con un obstáculo que está a 5 ft de altura sobre el terreno de juego; muestre que:
+    \[
+    x_{\text{max}} \approx 405.3174 \ \text{ft}.
+    \]
+    
+    \item A su vez, el máximo alcance vertical o altura máxima se denota como \( y_{\text{max}} \) y corresponde a la mayor distancia a la que llega el móvil en su desplazamiento hacia arriba y la alcanza en el momento en que la componente vertical de la velocidad vale cero; es decir, en el momento en el que la derivada de la posición vertical \( y = y(t) \) se anula. Con base en esto, muestre que:
+    \[
+    y_{\text{max}} \approx 124.2617 \ \text{ft}.
+    \]
+    
+    \item Dibuje las gráficas de las funciones coordenadas \( x = x(t) \) y \( y = y(t) \) para \( 0 \leq t \leq t_{\text{imp}} \) donde \( t_{\text{imp}} \) es el tiempo en el que la pelota choca con el obstáculo que le impide seguir desplazándose parabólicamente.
+    
+    \item Dibuje la trayectoria de la pelota en el plano \( xy \).
+\end{enumerate}
+%Ejercicio 9
+
+    \noindent {\large \bf 9. Una pista de carreras} \\
+    Un arquitecto especializado en instalaciones deportivas quiere construir una pista de carreras de 1320 ft (un cuarto de milla) de largo alrededor de un campo de fútbol americano con la orientación que se muestra en la figura. El campo mide 360 ft de largo (incluyendo las zonas de anotación) y 160 \ \text{ft} de ancho. La pista consiste de dos semicírculos y dos segmentos rectilíneos cuya longitud mínima es la del largo del campo.
+
+\includegraphics[width=0.5\textwidth, center]{cancha.png}
+
+\begin{enumerate}
+    \item Mostrar que es posible construir una pista de un cuarto de milla alrededor del campo de fútbol. (Se sugiere calcular la longitud de la pista más corta que podría construirse alrededor del campo).\\
+        {\bf R:} Si calculamos la longitud mínima que podemos construir alrededor del campo y se la restamos a los 1320 ft que queremos tenemos que:
+        \begin{align*}
+        2(360)+2\pi 80 = 720 + 502.6548 = 1222.6548
+        1320-1222.6548 = 97.3452
+        \end{align*}
+    Si esto lo dividimos entre 2 y se lo agregamos a la longitud de los laterales del campo y mantenemos la de los semicírculos, obtendríamos una pista de 1320 ft, con las siguientes dimensiones: lados rectos: 408.6726; semicírculos: 502.6548.
+    
+    \item Sea \( L \) la longitud, en pies, de una de las partes rectas de la pista y sea \( x \) la distancia, en pies, entre la línea lateral del campo y una de las partes rectas de la pista. Muestre que \( L \) como función de \( x \) viene dada por:
+    \[
+    L(x) = 660 - 80 \pi - \pi x
+    \]
+    
+    {\bf R:} En base que la forma de crear la pista es sumar los lados rectos más los dos perímetros semicírculos (o una circunferencia de un círculo) se puede desarrollar la siguiente ecuación:
+    
+    \[
+    2y+2\pi(80+x)=1320
+    \]
+    
+    donde $y$ es la longitud del lado recto de la pista y $x$ es la distancia entre el largo de la campo y el lado recto de la pista.\\
+    Si despejáramos $y$ tenemos:
+    \[
+    y=660-80\pi-\pi x
+    \]
+    
+    y grafique esta regla de correspondencia para \( 0 \leq x \leq 20 \). 
+    
+    \includegraphics[width=0.7\textwidth, center]{graficapista.png}
+     
+    Con base en esta gráfica:
+    \begin{enumerate}
+        \item Estime la mínima longitud de la parte recta de la pista y, luego, muestre que el valor de \( x \) para el que esta ocurre es aproximadamente 15.49 ft.\\
+        {\bf R:} Según la gráfica y la información del problema, la mínima longitud sería de 360, sustituyendo esto a la ecuación y despejando a x obtenemos:
+        \begin{align*}
+            360&=660-80\pi-\pi x\\
+            360-600&=-80\pi-\pi x\\
+            -300&=-80\pi-\pi x\\
+            -300&=-\pi(80+x)\\
+            \frac{-300}{-\pi}&=80+x\\
+            95.4929 - 80 &= x\\
+            x&=15.4929
+        \end{align*}
+        Por lo tanto, para la mínima longitud de la parte recta, el valor de $x$ es aproximadamente 15.4929.
+        
+        \item Estime la máxima longitud de la parte recta de la pista y, luego, muestre que el valor de \( L \) para el que esta ocurre es aproximadamente 408.67 \ \text{ft}.\\
+    {\bf R:} Según la gráfica, la máxima longitud sería de 408.6725, sustituyendo esto a la ecuación y despejando a x obtenemos:
+        \begin{align*}
+            408.6725&=660-80\pi-\pi x\\
+            408.6725-600&=-80\pi-\pi x\\
+            -251.3275&=-80\pi-\pi x\\
+            -251.3275&=-\pi(80+x)\\
+            \frac{-251.3275}{-\pi}&=80+x\\
+            80 - 80 &= x\\
+            x&=0
+        \end{align*}
+    Por lo tanto, para la máxima longitud de la parte recta, el valor de $x$ es aproximadamente 0.
+    \end{enumerate}
+\end{enumerate}
+
+    \noindent {\large \bf 11. Una caja con tapa superior} \\
+    De un pedazo rectangular de cartón de 6 ft por 10 ft se va a fabricar una caja con tapa superior doblando a lo largo de las líneas punteadas, cortando cuatro cuadrados del mismo tamaño (véase la Figura 1) y plegando dentro de la caja las dos pestañas extras.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics{caja.png}
+    \caption{ Caja de 6 ft $\times$ 10 ft}
+\end{figure}
+
+\begin{enumerate}
+    \item Hallar una fórmula que exprese el volumen \( V \) de la caja como función de la longitud \( x \) de los lados de los cuadrados que se cortan.\\
+    
+    \item 
+    {\bf R:} Según la Figura 1, tenemos que un lado sera igual a $6-2x$, otro a $5-x$ y la altura igual a $x$, por consiguiente tenemos la siguente ecuación:
+    \begin{align*}
+    V&=x(5-x)(6-2x)\\
+    V&=5x-x^2(6-2x)\\
+    V&=30x-6x^2-10x^2+2x^3\\
+    V&=2x^3-16x^2+30x
+    \end{align*}
+    
+    \item Describa, mediante una desigualdad que acote los posibles valores de \( x \), el dominio de definición de la función \( V = V(x) \) del inciso anterior.\\
+    
+    
+    {\bf R:} Ya que el valor de $x$ se le quitará como un cuadrado a ambos lados del cartón, entonces el máximo corte que se puede hacer es al lado más corto, siendo este menor a 3, ya que más de 3 reduciría los 6 ft. Así mismo tiene que ser mayor a 0, ya que si no quitamos nada no podríamos armar una caja. Entonces el dominio de $V=2x^3-16x^2+30x$ sería: $0<x<3$.
+    
+    \item Usar la gráfica de \( V = V(x) \) para dar valores aproximados de las dimensiones de la caja de máximo volumen.\\
+    
+    
+    {\bf R:} Según la siguiente gráfica\\
+    \includegraphics[width=0.7\textwidth, center]{graficacaja.png}
+    el punto más alto, o el punto $x$ donde está el máximo volumen es 1.21, sustituyendo en la ecuación tenemos:
+    \begin{align*}
+    V&=2(1.21)^3-16(1.21)^2+30(1.21)\\
+    V&=2(1.7715)-16(1.4641)+36.3\\
+    V&=3.543-23.4256+36.3\\
+    V&=-19.8826+36.3\\
+    V&=16.4174
+    \end{align*}
+    Por lo tanto, el valor del volumen máximo es de 16.4174, con $x=1.21$
+\end{enumerate}
+
+    \noindent {\large \bf 13. Un hato de 20 borrejos cimarrones} \\
+    Un hato de 20 borregos cimarrones se libera en un área protegida para la recuperación de la población silvestre de esa especie en peligro de extinción. Se espera que, con un manejo cuidadoso, la población de borregos \( N = N(t) \) después de \( t \) años sea
+
+\[
+N(t) = \frac{220}{1 + 10 e^{-0.1863 t}}
+\]
+
+y que la población será capaz de autosustentarse sin supervisión cuando llegue a 80 individuos.
+
+\begin{enumerate}
+    \item Dibuje la gráfica de \( N = N(t) \).\\
+    {\bf R:}\\
+    \includegraphics[width=1\textwidth, center]{graficaborregos.png}
+    
+    \item Muestre que el programa de repoblación deberá sostenerse por lo menos durante 9.36 años antes de que la población sea autosustentable.\\
+    {\bf R:} Teniendo la función, sustituimos el valor de 80 y desarrollamos para despejar a $t$, que sería el tiempo que tardaría:\\
+    \begin{align*}
+        80 &= \frac{220}{1 + 10 e^{-0.1863 t}}\\
+        1 + 10 e^{-0.1863 t}(80) &= 220 \\
+        1 + 10 e^{-0.1863 t} &= \frac{220}{80} \\
+        10 e^{-0.1863 t} &= 2.75 -1 \\
+        e^{-0.1863 t} &= \frac{1.75}{10} \\
+    \ln (e^{-0.1863 t}) &= \ln (0.175) \\
+        -0.1863 t &= -1.7429\\
+        t &= \frac{-1.7429}{-0.1863}\\
+        t&=9.3553
+    \end{align*}
+    
+    Obtuvimos un valor aproximado, lo cual nos confirma que habrá 80 borregos cimarrones en 9.36 años.
+    
+    \item Según este modelo, ¿cuántos borregos cimarrones podrían habitar el área protegida? Justifique su respuesta en términos de la gráfica de \( N = N(t) \) y confirme su respuesta calculando el límite \( \lim_{t \to \infty} N(t) \).
+\end{enumerate}
+
+
+    \noindent {\large \bf 14. Modelo para la variacion diurna} \\
+    La Figura 3 muestra un modelo para la variación diurna (i.e., durante un período de 24 horas) de la altura y de la marea sobre el nivel medio del mar en una caleta de la bahía de San Francisco. Calcular los valores de \( y_0 \), la altura media; de la amplitud \( A \), la frecuencia angular \( \omega \) y la fase \( \phi \) de una función armónica para el modelo con regla de correspondencia:
+
+\[
+y(t) = y_0 + A \sin(\omega t + \phi),
+\]
+
+si se supone que \( t = 0 \) corresponde a la medianoche, el tiempo se mide en horas y la altura, en pies.
+
+    
 \end{document}
